# Gmail-Clone

./: CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Dockerfile.test  README.md  cookies.txt  details.txt  docker-compose.yml  package.json
blacklist_service/: Dockerfile.test
blacklist_service/tests/: BloomFilterTest.cpp  DeleteCommandTest.cpp  GetCommandTest.cpp  HashTest.cpp  PostCommandTest.cpp  ServerTest.cpp  UrlTest.cpp
mail_app/: settings.gradle.kts
mail_app/app/: build.gradle.kts
mail_app/gradle/: libs.versions.toml
mail_client/: Dockerfile.client  package-lock.json  package.json
mail_client/mail/: package-lock.json
mail_client/public/: index.html
mail_client/src/: App.css  App.js  index.js
mail_web_api/: .env  Dockerfile.api  app.js  package-lock.json  package.json
mail_web_api/config/: mailConfig.js
mail_web_api/controllers/: blackListController.js  labelController.js  mailController.js  profileImageController.js  tokenController.js  userController.js
mail_web_api/middleware/: auth.js  validateUser.js
src/app/: App.cpp  (+2 more)
tests/: AddCommandTest.cpp  AppForTests.cpp  AppForTests.h  AppTest.cpp  App_test.cpp  BlackListStorageTest.cpp  BlackListTest.cpp  BloomFilterTest.cpp  BloomStorageTest.cpp  ConsoleIOHandler_test.cpp  ContainCommandTest.cpp  GetCommandTest.cpp  HashTest.cpp  Hash_test.cpp  InputParserTest.cpp  InputParser_test.cpp  ParamsTest.cpp  PostCommandTest.cpp  ServerTest.cpp  UrlTest.cpp  add_url_test.cpp  console_input_test.cpp  main.cpp  test.cpp
wiki/: AndroidClient.md  FullSystemSetup.md  WebClient.md
(+369 files in other folders)
